--- a/diffdrive_arduino/CMakeLists.txt
+++ b/diffdrive_arduino/CMakeLists.txt
@@ -45,34 +45,11 @@ pluginlib_export_plugin_description_file(hardware_interface robot_hardware.xml)
 
 
 
-add_library(fake_robot SHARED src/fake_robot.cpp src/wheel.cpp)
-set_property(TARGET fake_robot PROPERTY POSITION_INDEPENDENT_CODE ON)
-
-target_include_directories(
-  fake_robot
-  PRIVATE
-  include
-)
-ament_target_dependencies(
-  fake_robot
-  hardware_interface
-  controller_manager
-  rclcpp
-  rclcpp_lifecycle
-  pluginlib
-)
-
-pluginlib_export_plugin_description_file(hardware_interface fake_robot_hardware.xml)
-
-
-
 
 install(
-  TARGETS diffdrive_arduino fake_robot
+  TARGETS diffdrive_arduino
   DESTINATION lib
 )
-
-
 
 
 install(
@@ -83,7 +60,6 @@ install(
 
 ament_export_libraries(
   diffdrive_arduino
-  fake_robot
 )
 ament_export_dependencies(
   hardware_interface
