--- a/path_finder_robot/package.xml
+++ b/path_finder_robot/package.xml
@@ -21,6 +21,11 @@
   <exec_depend>rviz</exec_depend>
   <exec_depend>xacro</exec_depend>
 
+
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
